Fix styling for disabled checkbox and right aligned checkbox

--- a/frontend/components/forms/fields/Checkbox/_styles.scss
+++ b/frontend/components/forms/fields/Checkbox/_styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
 
-  &:hover:not(.fleet-checkbox--disabled) {
+  &:hover:not(.fleet-checkbox__label--disabled) {
     svg {
       .checkbox-state {
         stroke: $core-vibrant-blue-over;
@@ -17,7 +17,7 @@
   }
 
   // During click only
-  &:active:not(.fleet-checkbox--disabled) {
+  &:active:not(.fleet-checkbox__label--disabled) {
     svg {
       .checkbox-state {
         stroke: $core-vibrant-blue-down;
@@ -30,7 +30,7 @@
   }
 
   // When tabbing
-  &:focus-visible:not(.fleet-checkbox--disabled) {
+  &:focus-visible:not(.fleet-checkbox__label--disabled) {
     outline: none;
 
     svg {
@@ -60,6 +60,16 @@
 
     &--disabled {
       color: $ui-fleet-black-50;
+
+      svg {
+        .checkbox-state {
+          stroke: $ui-fleet-black-25;
+          fill: $ui-fleet-black-25;
+        }
+        .checkbox-unchecked-state {
+          stroke: $ui-fleet-black-25;
+        }
+      }
     }
   }
 
@@ -79,13 +89,8 @@
   flex-direction: row-reverse; // Switches the text to the left side of checkbox as all checkboxes are now display flex
 
   .fleet-checkbox {
-    &__input {
-      float: right;
-    }
-
-    &__tick {
-      left: initial;
-      right: -8px;
+    &__icon {
+      padding-left: $pad-small;
     }
 
     &__label {
